src/test/ui/issues/issue-57362-2.stderr
error: implementation of `X` is not general enough
  --> $DIR/issue-57362-2.rs:22:13
   |
LL |     let x = <fn (&())>::make_g(); //~ ERROR not general enough
   |             ^^^^^^^^^^^^^^^^^^
   |
   = note: `X` would have to be implemented for the type `for<'r> fn(&'r ())`
   = note: but `X` is actually implemented for the type `fn(&'0 ())`, for some specific lifetime `'0`

error: aborting due to previous error

